# ZPE-Smell

./: .gitignore  .zenodo.json  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLIC_AUDIT_LIMITS.md  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  LEGAL_BOUNDARIES.md  README.md  SCOPE.md  SUPPORT.md
docs/_reorientation/2026-04-17/: NOVELTY_CARD.md
proofs/artifacts/: public_smell_surrogate_scope.json
proofs/manifests/: CURRENT_AUTHORITY_PACKET.md
src/zpe_smell/: __init__.py  codec.py  evaluation.py  reproduce.py  stream.py
tests/: test_public_surface.py
