[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-smell"
version = "0.1.0"
license = "LicenseRef-Zer0pa-SAL-7.0"
description = "Bounded smell encoding research repo over a surrogate receptor-response panel."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Zer0pa" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
zpe-smell-reproduce = "zpe_smell.reproduce:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
